Fix z-index of choices directive

--- a/src/sass/modules/main/components/_choices.sass
+++ b/src/sass/modules/main/components/_choices.sass
@@ -3,7 +3,7 @@
 // ******************************************************#
 
 .choices__list--dropdown
-  z-index: 3
+  z-index: 100
 
 .choices__inner
   min-height: 0
